# tenk_rag

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: manage.py  pyproject.toml
backend/app/: settings.py
backend/app/application/: models.py
backend/app/application/migrations/: 0001_initial.py
backend/app/application/use_cases/: get_historial_stock_price.py  get_real_time_stock_price.py  search_documents.py
backend/app/di/: container.py
backend/app/domain/dtos/: agents.py  document_chunk.py  stock_price.py
backend/app/domain/interfaces/: agent_orchestrator.py  auth.py  distributed_cache.py  document_repository.py  embedder_service.py  messages.py  observability.py  stock_price_repository.py
backend/app/infrastructure/agent/langgraph/: orchestrator.py  tools.py
backend/app/infrastructure/logging/: logger.py
backend/app/infrastructure/repositories/: postgres_vector_db.py  yfinance.py
backend/app/infrastructure/services/aws/: bedrock_embedder.py  bedrock_llm.py  cognito.py  redis.py  sqs_message.py
backend/app/infrastructure/services/observability/: langfuse.py
backend/app/presentation/api/: main.py
backend/app/presentation/api/schemas/: request.py  response.py
notebooks/: testing.ipynb
src/: settings.py
src/di/: container.py
src/domain/interfaces/: auth.py  llm_service.py
src/infrastructure/services/aws/: bedrock_embedder.py  sqs_message.py
tasks/: todo.md
