[project]
name = "10k-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "boto3>=1.42.50",
    "boto3-stubs>=1.42.50",
    "fastapi[standard]>=0.129.0",
    "jupyterlab>=4.5.4",
    "langchain[aws]>=1.2.10",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.9",
    "langchain-postgres>=0.0.16",
    "langfuse>=3.14.2",
    "langgraph>=1.0.8",
    "pgvector>=0.3.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "redis>=7.2.0",
    "ruff>=0.15.1",
    "sqlalchemy>=2.0.46",
    "yfinance>=1.2.0",
    "django>=6.0.2",
]
